# TI32_emulator_core

./: .gitignore  README.md
components/ble_hid_host/: BleHidHost.h  CMakeLists.txt  README.md  library.properties
components/file_handling/: CMakeLists.txt  README.md  dsk_image.h  file_io.h  library.properties  program_io.cpp  program_io.h
components/font/: CMakeLists.txt  README.md  library.properties  ti_font.cpp  ti_font.h
components/host_common/: CMakeLists.txt
components/host_common/include/: ti_host.h
components/host_common/src/: ti_host_boot.cpp  ti_host_color.cpp  ti_host_editor.cpp  ti_host_logo.cpp  ti_host_render.cpp  ti_host_screen.cpp  ti_host_text.cpp  ti_host_tokenizer.cpp
components/interpreter/: CMakeLists.txt  README.md  exec_manager.h  expr_parser.h  library.properties  line_editor.h  sprites.h  ti_platform.cpp  ti_platform.h  token_parser.h  tp_types.h  var_table.h
components/speech/: library.properties  tms5220.cpp  tms5220.h  tms5220_coeffs.h
